# python-project-50

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  gendiff.cast  gendiff.py  pyproject.toml  setup.cfg
.github/workflows/: climate.yml  main.yml
differencies/scripts/: gendiff.py
gendiff/: __init__.py
gendiff/modules/: gendiff.py  gendiffer.py  parse_file.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/test_files/: file2.json  file3.yaml  file4.yml
gendiff/tests/: conftest.py
gendiff/tests/fixtures/: big_strings.py
gendiff/tests/modules/: test_gendiffer.py
