[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Sergeeva Larisa <mindzu@mail.ru>"]
readme = "README.md"
packages = [
	{include = "differencies"},
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.scripts]
gendiff = "differencies.scripts.gendiff:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
